syntax = "proto3";

package notificationPackage;

service NotificationService {
  rpc NotifyOrderStatus (OrderStatusRequest) returns (NotificationResponse);
  rpc NotifyWelcome (WelcomeRequest) returns (NotificationResponse);
}

message OrderStatusRequest {
  string orderId = 1;
  string status = 2;
  string email = 3;
  string firstName = 4;
  string lastName = 5;
  string userId = 6;
}

message WelcomeRequest {
  string userId = 1;
  string email = 2;
  string firstName = 3;
  string lastName = 4;
}

message NotificationResponse {
  bool success = 1;
}